# arimalo

./: .coverage-baseline.json  .mcp.json  .orchestrator-session-id  2026-05-06-CODE_REVIEW.md  ACCOUNTS.md  ETHEREUM.md  IMPROVEMENTS.md  PLAN.md  PLUGINS.md  README.md  SPEED.md  TODO.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  clippy.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/features/architecture/: incremental_pipeline.feature  lightweight_metadata.feature  rule_specificity.feature  rules_auto_rebuild.feature  scoped_view.feature  txn_id_rule_priority.feature  ui_over_cli.feature
src-tauri/features/cli/: dedupe.feature
src-tauri/features/fixtures/: account_opening.transactions  balances_portfolio.prices  balances_portfolio.transactions  balances_with_contras.prices  balances_with_contras.transactions  bank_real.csv  cgt_fee_income_offset.transactions  cgt_fee_on_disposal.transactions  cgt_non_aud_base.transactions  cgt_non_aud_base_prices.transactions  cgt_swap.transactions  cgt_trades.transactions  corporate_action_split.transactions  cost_and_price.transactions  cost_total.transactions  daily.prices  duplicate_txn_legs.transactions  fifo_basic.transactions  fifo_discount.transactions  fifo_equity_swap.transactions  fifo_equity_swap_prices.transactions  fifo_multi_commodity.transactions  fifo_partial.transactions  fifo_pooled_equity_multi_fill.transactions  fifo_pooled_equity_swap.transactions  fifo_same_leg_equity_multi_fill.transactions  fifo_sell_more.transactions  fifo_swap.transactions  fifo_swap_prelinked.transactions  fifo_swap_price_annotation.transactions  fifo_swap_unpriced.transactions  fifo_tagged_equity_multi_fill.transactions  fifo_tagged_multi_account_fill.transactions  fifo_transfer.transactions  hyphenated_commodity.transactions  income_expenses.transactions  income_pnl.transactions  income_scoped.transactions  intraday.prices  (+19 more)
src-tauri/prompts/: classify.md
src-tauri/sources/: arimalo-metadata.automerge
src-tauri/src/: automerge_store.rs  build_cache.rs  content_store.rs  csv_transform.rs  generated_ledger.rs  generated_store.rs  issues.rs  ledger_parser.rs  lib.rs  main.rs  ofx_parser.rs  plugins.rs  processing_pipeline.rs  query.rs  relay_client.rs  report_csv.rs  report_templates.rs  reports.rs  root_config.rs  rules.rs  sync.rs  trade_link_repair.rs  transform_suggest.rs
src-tauri/templates/: cgt_report.md.tera  income_report.md.tera
src-tauri/tests/: arimalo_query_cli.rs  bdd.rs  issues_collect_all.rs  plugin_runner_cli_injection.rs  report_csv_fixtures.rs  reports_fixtures.rs  scoped_rebuild_equivalence.rs  startup_perf.rs  tax_config.rs  vault_loss_harvest_analysis.rs  web_dispatch.rs
(+228 files in other folders)
